apps/adguard/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app adguard
  namespace: *app
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: *app
  template:
    metadata:
      labels:
        app: *app
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: *app
      containers:
        - name: adguard-home
          image: adguard/adguardhome:v0.107.79@sha256:aba9e3bf0613be3ba3755e1fc311b126e2c24bec25e18b6483894a88283074f0
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65532
            runAsGroup: 65532
            allowPrivilegeEscalation: false
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 53
              name: dns
              protocol: UDP
            - containerPort: 53
              name: dnstcp
              protocol: TCP
            - containerPort: 3000
              name: http-initial
              protocol: TCP
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - name: adguard-data
              mountPath: /opt/adguardhome/work
            - name: adguard-conf
              mountPath: /opt/adguardhome/conf
          resources:
            requests:
              memory: 600Mi
              cpu: "15m"
            limits:
              cpu: 500m
              memory: 1500Mi
          livenessProbe: &probe
            exec:
              command:
                - /bin/sh
                - -c
                - nslookup localhost 127.0.0.1
          readinessProbe: *probe
        - name: adguard-exporter
          image: ghcr.io/sholdee/adguard-exporter:2.1.2@sha256:5239843400a5e05bebf5c0b0f35b6f7724a02afdc90e3be3711b0a4abe95b5da
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65532
            runAsGroup: 65532
            allowPrivilegeEscalation: false
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: metrics
              protocol: TCP
          volumeMounts:
            - name: adguard-data
              mountPath: /opt/adguardhome/work
          resources:
            requests:
              memory: 100Mi
              cpu: "5m"
            limits:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            httpGet:
              path: /livez
              port: metrics
          readinessProbe:
            httpGet:
              path: /readyz
              port: metrics
      volumes:
        - emptyDir: {}
          name: adguard-data
        - emptyDir: {}
          name: adguard-conf
        - name: adguard-secret
          secret:
            secretName: adguard-secret
