apps/adguard/manifests/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard
  namespace: adguard
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - adguard.mgmt.sholdee.net
  rules:
    - backendRefs:
        - name: adguard-http
          port: 80
      sessionPersistence:
        sessionName: route
        type: Cookie
