apps/adguard/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  namespace: adguard
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  ingressClassName: nginx
  rules:
  - host: adguard.mgmt.sholdee.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: adguard-http
              port:
                name: http
